samples/_failures_safe/1761129731_c90db7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4384354.c: In function ‘main’:
./samples/SAFE/__tmp_b4384354.c:168:19: error: expected ‘;’ at end of input
  168 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_b4384354.c:168:13: error: expected declaration or statement at end of input
  168 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_b4384354.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b4384354.c:168:13: error: expected declaration or statement at end of input
